Fix center aligned pic descriptions and index links
I changed all the center classed tags to divs with center aligned text.
Chrome dev tools is telling me something is wrong with just using classes,
so this is my workaround.

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ img {
   margin-right: auto;
 }
 
-div,
-center {
+div {
   text-align: center;
 }
